fix attribution and height on mobile

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,6 @@
 
 html {
   font-size: 15px;
-  height: 100%;
-  width: 100%;
   font-family: "Inter", sans-serif;
 }
 body {
@@ -20,7 +18,6 @@ body {
 main {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
   height: 100%;
   width: 100%;
@@ -29,7 +26,6 @@ main {
 .card {
   display: flex;
   flex-direction: column;
-  /* justify-content: center; */
   align-items: center;
   height: 100%;
   width: 90%;
@@ -43,6 +39,7 @@ main {
   background-image: url("./images/image-header-mobile.jpg");
   width: 100%;
   height: 250px;
+  min-height: 200px;
   background-repeat: no-repeat;
   background-size: cover;
   border-radius: 10px 10px 0 0;
@@ -56,12 +53,6 @@ main {
   z-index: 2;
   border-radius: 10px 10px 0 0;
 }
-
-/* .text-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-} */
 
 .header-text {
   margin-top: 1.5em;
@@ -101,6 +92,20 @@ main {
   text-align: center;
   margin-top: 0.5em;
   font-family: "Lexend Deca", sans-serif;
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  color: hsla(0, 0%, 100%, 0.65);
+  margin-top: 1em;
+  font-family: "Lexend Deca", sans-serif;
+  justify-self: flex-end;
+  margin-bottom: 20px;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
 
 @media (min-width: 1400px) {
@@ -145,14 +150,12 @@ main {
     margin-top: 2em;
     text-align: left;
     padding: 0;
-    /* padding-right: 3em; */
     margin-bottom: 0.3em;
     font-weight: 700;
     letter-spacing: 0.08em;
   }
 
   .description {
-    /* margin-top: 0; */
     text-align: left;
     padding: 0;
     padding-right: 3em;
@@ -162,7 +165,6 @@ main {
     box-sizing: border-box;
     margin-top: 1em;
     padding-right: 5em;
-
     flex-direction: row;
     width: 100%;
     justify-self: flex-end;
@@ -174,5 +176,9 @@ main {
 
   .stat-description {
     text-align: left;
+  }
+
+  .attribution {
+    margin-bottom: 0;
   }
 }
